--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -1183,7 +1183,7 @@
         <!--Chat Logs-->
         <scene sceneID="ftL-wM-Ck3">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="48U-uy-PRd" customClass="ChatLogsViewController" customModule="Boatell_v3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ChatLogController" modalPresentationStyle="fullScreen" id="48U-uy-PRd" customClass="ChatLogsViewController" customModule="Boatell_v3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="NLu-hr-OB1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
